# This file documents the revision history for Perl extension Catalyst.

        - Fix calling use Catalyst::Test 'MyApp' 'foo' which used to work,
          but stopped as the 2nd parameter can be an options hash now (t0m)
        - Bump Moose dependency to fix make_immutable bug (t0m)
        - Use compile time extends in Catalyst::Controller (t0m)
        - Make Catalyst::Request::uploads attribute non-lazy, to fix
          test for Catalyst-Engine-Apache (t0m)
        - Bump version of MooseX::Emulate::Class::Accessor::Fast (t0m)
        - Stop using MooseX::Adopt::Class::Accessor::Fast by default, to stop
          breaking other packages which use Class::Accessor::Fast
        - Remove unused action_container_class attribute from 
          Catalyst::Dispatcher (t0m)
        - Replace {_body} instance access with calls to _body accessors (t0m)
        - Add backwards compatibility alias methods for private attributes on 
          Catalyst::Dispatcher which used to be public. Needed by 
          Catalyst::Plugin::Server and  Catalyst::Plugin::Authorization::ACL 
          (t0m)
        - Fix return value of $c->req->body, which delegates to the body
          method on the requests HTTP::Body instance (t0m)
          - Test for this (t0m)
        - Fix calling $c->req->body from inside an overridden prepare_action
          method in a plugin, as used by Catalyst::Plugin::Server (t0m)
          - Test for this (t0m)
        - Fix assignment to Catalyst::Dispatcher's preload_dispatch_types and
          postload_dispatch_types attributes - assigning a list should later 
          return a listref. Fixes Catalyst::Plugin::Server. (t0m)
          - Tests for this (t0m)
        - Change streaming test to serve itself rather than 01use.t, making 
          test sync for engines easier (t0m)
        - Refactor capturing of $app from Catalyst::Controller into
          Catalyst::Component::ApplicationAttribute for easier reuse in other